# P08

./: .gitignore  CICD_DOCUMENTATION.md  CLOUD_RUN_DEPLOYMENT.md  GCP_SETUP.md  Makefile  README.md  WORKFLOW_QUICK_START.md  WORKFLOW_TRIGGERS.md  config.ini  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci-cd.yml
api/: app.py  main.py
dashboard/: __init__.py  app.py
db/: database.py  models.py
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.monitoring.yml  docker-compose.yml
model/: convert_to_onnx.py  data_utils.py  handler.py  train.py  train_model.py
model/artifacts/: model.onnx  model_optimized.onnx
monitoring/: drift.py  grafana_drift_dashboard.json  monitoring_utils.py
profiling/: onnx_optimization.py
scripts/: setup-gcp.sh  validate_cicd.py
tests/: conftest.py  test_api.py  test_data_utils.py  test_model.py  test_onnx_integration.py
