[project]
name = "projet08"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "imbalanced-learn>=0.14.1",
    "lightgbm>=4.6.0",
    "memory-profiler>=0.61.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.0",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnx-simplifier>=0.5.0",
    "onnxmltools>=1.16.0",
    "onnxruntime[transformers]>=1.25.1",
    "packaging>=26.2",
    "pandas>=3.0.2",
    "prometheus-client>=0.25.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "evidently>=0.7.21",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
